[package]
name = "steel-series-apex-oled"
version = "0.1.0"
authors = ["Michael Cooper <mythmon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "^0.8"
anyhow = "^1"
tracing = "^0.1"
tracing-subscriber = "^0.2"
bitvec = "^0.22"
